<resources>

    <string name="app_name">Safe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="account_type">Account type</string>
    <string name="account_username">Username/Email</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="notes">Notes</string>
    <string name="password_error">Please enter your password</string>
    <string name="username_error">Please enter your Username/Email</string>
    <string name="account_error">Please enter your Account name</string>
    <string name="success_message">Account Added Successfully</string>
    <string name="success_message_edit">Account Edited Successfully</string>
    <string name="add_account">Add Account</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="accounts">Accounts</string>
    <string name="f_name_error">First name should not be empty.</string>
    <string name="account_password_error">Password should not be empty</string>
    <string name="email_empty_error">Email should not be empty</string>
    <string name="email_invalid">Please enter a valid email</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password_incorrect">Password Incorrect</string>
    <string name="account_details">Account Details</string>
    <string name="delete_title">Do you want to delete?</string>
    <string name="finish_app">Do you want to exit?</string>
    <string name="delete_text">Do you really want to delete&#160;</string>
    <string name="finish_text">Do you really want to exit from \'Safe\' ?</string>
    <string name="pass_code">pM123#</string>
    <string name="pass_code1">pM456!</string>
    <string name="btn_done">Done</string>
    <string name="btn_edit">edit</string>
    <string name="title_activity_pin">PinActivity</string>
    <string name="pin_text">set a four digit password</string>
    <string name="set_your_pin">Set Your Pin</string>
    <string name="set_your_details">Set Your Details</string>
    <string name="title_activity_security_qn">SecurityQnActivity</string>
    <string name="security_qn_description">Please set a security question.This will be ask, when you failed to enter your pin for four times</string>
    <string name="go">Go</string>
    <string name="set">SET</string>
    <string name="done">Done</string>
    <string name="splash_text">save it! lock it!</string>
    <string name="splash_text2">save it! lock it!</string>
    <string name="activity_image_trans">activity_image_transition</string>
    <string name="activity_layout_trans">activity_layout_transition</string>
    <string name="security_qn_hint">Security Question</string>
    <string name="answer">Answer</string>
    <string name="question">Enter Your Question</string>
    <string name="search_menu">Search</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_text">Enter your 4 digit pin to login.</string>
    <string name="wrong_pin_msg">You entered wrong pin.\n Please try again.</string>
    <string name="wrong_pin_last_msg">You entered wrong pin.\n Answer to your own security question.</string>
    <string name="clear_all">clear all</string>
    <string name="error_security_answer">Do you forgot your security answer?</string>
    <string name="ver_txt">Forgot your answer ?</string>
    <string name="network_problem">Please check your network connection</string>
    <string name="security_qn">Security Question</string>
    <string name="signup_sub">Set your security question and answer</string>
    <string name="login_subtitle">To access your account</string>
    <string name="io_exception">IO Exception</string>
    <string name="enter_your_verification_code">Enter your verification code here</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code1">Verification Code</string>
    <string name="enter_code">Enter your verification code</string>
    <string name="settings">Settings</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="about_app">About App</string>
    <string name="last_modified">Last Modified:</string>
    <string name="changes_added_successfully">Changes Added Successfully</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="wrong_verification_code">Wrong verification code</string>
    <string name="welcome">Welcome!</string>
    <string name="account_name">Account Name</string>
    <string name="sign_up_message">Sign up Here to use the app</string>
    <string name="date_modified">Date Modified</string>
    <string name="no_accounts_found">No Accounts Found</string>
    <string name="cancel">Cancel</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="backspace">X</string>
    <string name="zero">0</string>
    <string name="ok">OK</string>
    <string name="logo">logo</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="hidden_password">Hidden Password</string>
    <string name="visible_password">Password Visible</string>
    <string name="validate_security_qn">Please enter your security question.</string>
    <string name="validate_security_ans">Please enter your answer.</string>
    <string name="delete_item">" account details?"</string>
    <string name="loading">Please wait..</string>
    <string name="error_bad_request">Bad Request.Please try again.</string>
    <string name="email_already_exists">Email Already taken.Try with another email account.</string>

    <string-array name="qn_array">
        <item>What is the name of your favorite childhood friend?</item>
        <item>What was your childhood nickname?</item>
        <item>What is your favorite movie?</item>
        <item>What was your favorite sport in high school?</item>
        <item>Who is your childhood sports hero?</item>
        <item>What was the name of the hospital where you were born?</item>
        <item>What is your favorite book?</item>

    </string-array>
</resources>
