<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context="com.bridge.passwordHolder.PinFragment">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        android:gravity="center"
        android:background="@color/primary"
        app:theme="@style/AppTheme"
        android:visibility="gone">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:padding="4dp"
            android:contentDescription="@string/back"
            />

        <com.bridge.passwordHolder.uicomponents.PMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_pin"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </android.support.v7.widget.Toolbar>
   <!-- <include layout="@layout/header_layout" />-->
    <RelativeLayout
       android:id="@+id/keypad_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/my_toolbar">

        <LinearLayout
            android:id="@+id/indicate_layout"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">
            <com.bridge.passwordHolder.uicomponents.PMButton
                android:id="@+id/ind1"
                android:layout_width="@dimen/ind_width"
                android:layout_height="@dimen/ind_width"
                style="@style/key_indicate_style">

            </com.bridge.passwordHolder.uicomponents.PMButton>
            <com.bridge.passwordHolder.uicomponents.PMButton
                android:id="@+id/ind2"
                android:layout_width="@dimen/ind_width"
                android:layout_height="@dimen/ind_width"
                style="@style/key_indicate_style">

            </com.bridge.passwordHolder.uicomponents.PMButton>
            <com.bridge.passwordHolder.uicomponents.PMButton
                android:id="@+id/ind3"
                android:layout_width="@dimen/ind_width"
                android:layout_height="@dimen/ind_width"
                style="@style/key_indicate_style">

            </com.bridge.passwordHolder.uicomponents.PMButton>
            <com.bridge.passwordHolder.uicomponents.PMButton
                android:id="@+id/ind4"
                android:layout_width="@dimen/ind_width"
                android:layout_height="@dimen/ind_width"
                style="@style/key_indicate_style">

            </com.bridge.passwordHolder.uicomponents.PMButton>
        </LinearLayout>
        <RelativeLayout
            android:layout_below="@+id/indicate_layout"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/row1"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key1"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:tag="1"
                    android:text="@string/one"
                    />
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key2"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:tag="2"
                    android:text="@string/two"
                    />
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key3"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:text="@string/three"
                    android:tag="3"

                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/row2"
                android:layout_below="@+id/row1"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key4"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:tag="4"
                    android:text="@string/four"
                    />
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key5"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:text="@string/five"
                    android:tag="5"
                    />
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key6"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:text="@string/six"
                    android:tag="6"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/row3"
                android:layout_below="@+id/row2"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key7"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:text="@string/seven"
                    android:tag="7"
                    />
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key8"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:text="@string/eight"
                    android:tag="8"
                    />
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key9"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:text="@string/nine"
                    android:tag="9"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/row4"
                android:layout_below="@+id/row3"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/keyb"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keybackspace"
                    android:text="@string/backspace"
                    android:tag="b"
                    />

                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/key0"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keystyle"
                    android:text="@string/zero"
                    android:tag="0"
                    />
                <com.bridge.passwordHolder.uicomponents.PMButton
                    android:id="@+id/confirm"
                    android:layout_width="@dimen/key_width"
                    android:layout_height="@dimen/key_width"
                    style="@style/keyset"
                    android:text="@string/set"
                    android:tag="@string/done"
                    />

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
