<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context="com.bridge.passwordHolder.SettingsFragment">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        android:gravity="center"
        android:background="@color/primary"
        app:theme="@style/AppTheme"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:padding="4dp"
            android:contentDescription="@string/back"
            />
        <com.bridge.passwordHolder.uicomponents.PMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:id="@+id/toolbar_title" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_below="@+id/my_toolbar">

        <com.bridge.passwordHolder.uicomponents.PMTextView
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@color/card_shadow"
            android:text="@string/reset_pin"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:id="@+id/reset_pin"
            android:textSize="16sp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/black_de"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"></View>
        <com.bridge.passwordHolder.uicomponents.PMTextView
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@color/card_shadow"
            android:text="@string/about_app"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:id="@+id/about"
            android:textSize="16sp"/>
    </LinearLayout>
</RelativeLayout>
