<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.bridge.passwordHolder.SecurityQnFragment"
    android:background="@color/bg">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.bridge.passwordHolder.uicomponents.PMTextView
                android:id="@+id/title"
                android:layout_marginTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:text="@string/security_qn_description"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <!--<com.bridge.passwordHolder.uicomponents.PMTextView
                android:id="@+id/description"
                android:layout_below="@+id/title"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal"
                android:text="@string/security_qn_description"
                android:layout_height="wrap_content" />-->

            <RelativeLayout
                android:visibility="visible"
                android:layout_below="@+id/title"
                android:id="@+id/button_pane"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:weightSum="1">

                    <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/autocomplete_qn"
                        android:layout_width="fill_parent"
                        android:padding="6dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/question"
                        android:inputType="text"
                        android:singleLine="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:imeOptions="actionNext"
                        />
                    <com.bridge.passwordHolder.uicomponents.PMTextView
                        android:id="@+id/qn"
                        android:layout_marginTop="16dp"
                        android:layout_width="fill_parent"
                        android:padding="6dp"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:textSize="16sp"
                        android:visibility="gone"
                        />

                    <com.bridge.passwordHolder.uicomponents.PMEditText
                        android:id="@+id/answer"
                        android:layout_marginTop="16dp"
                        android:layout_width="fill_parent"
                        android:padding="6dp"
                        android:layout_marginBottom="30dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:focusableInTouchMode="true"
                        />
                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.bridge.passwordHolder.uicomponents.PMTextView
                            android:id="@+id/txt_Ver"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ver_txt"
                            android:layout_gravity="left|center_vertical"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:gravity="left"
                            android:textColor="@color/primary"
                             />

                        <com.bridge.passwordHolder.uicomponents.PMButton
                            android:id="@+id/btn_Go"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:text="@string/go"
                            android:gravity="center"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/pressed_key"
                            android:textColor="@android:color/white"/>
                    </RelativeLayout>
                </LinearLayout>


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
