<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context="com.bridge.passwordHolder.AddAccountFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar_add"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:background="@color/primary"
        app:theme="@style/AppTheme" >
        <com.andexert.library.RippleView
            android:id="@+id/back_button_ripple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rv_color="@color/bg"
            app:rv_centered="true"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow"
                android:padding="8dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="left"
                android:contentDescription="@string/back"
                />
        </com.andexert.library.RippleView>
        <com.bridge.passwordHolder.uicomponents.PMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

        <com.andexert.library.RippleView
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rv_color="@color/bg"
            app:rv_centered="true"
            app:rv_rippleDuration="250"
            android:layout_margin="4dp"
            android:layout_marginRight="12dp"
            android:layout_gravity="right"
            >
            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tick"
                android:padding="8dp"
                android:contentDescription="@string/add_account"
                />
        </com.andexert.library.RippleView>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_layout_padding">

                <com.bridge.passwordHolder.uicomponents.PMEditText
                    android:id="@+id/account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/accout_type"
                    style="@style/edit_text_style"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_layout_padding">

                <com.bridge.passwordHolder.uicomponents.PMEditText
                    android:id="@+id/account_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/account_username"
                    style="@style/edit_text_style"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_layout_padding"
                >

                <com.bridge.passwordHolder.uicomponents.ShowHidePasswordEditText
                    android:id="@+id/account_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:tag="0"
                    android:hint="@string/password"
                    style="@style/edit_text_style"
                    android:paddingRight="55dp"/>



            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_layout_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_layout_padding">

                <com.bridge.passwordHolder.uicomponents.PMEditText
                    android:id="@+id/account_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/notes"
                    android:imeOptions="actionDone"
                    style="@style/edit_text_style"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </ScrollView>


</FrameLayout>
